--- a/Submissions/LinesCirclesCurves/style.css
+++ b/Submissions/LinesCirclesCurves/style.css
@@ -33,23 +33,27 @@ body {
 }
 
 #canvasContainer {
-    width: 88vw;
-    height: 95vh;
-    position: relative;
+  width: 88vw;
+  height: 95vh;
+  position: relative;
 }
 
 #lineCanvas,
 #circleCanvas,
 #curveCanvas {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 
 .btn {
-    width: 100%;
-    margin: 1vh 0;
+  width: 100%;
+  margin: 1vh 0;
+}
+
+hr.dashed {
+  border-top: 3px dashed #bbb;
 }
